02-route-ingress-networking/assets/docs-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-app
  namespace: docs-ops
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: nginx:1.25
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: docs-svc
  namespace: docs-ops
spec:
  selector:
    app: docs
  ports:
    - port: 80
      targetPort: 80
